--- a/src/Simplex.glade
+++ b/src/Simplex.glade
@@ -24,7 +24,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="textview1">
+          <object class="GtkTextView" id="entrada">
             <property name="width_request">400</property>
             <property name="height_request">300</property>
             <property name="visible">True</property>
@@ -44,13 +44,11 @@
             <property name="homogeneous">True</property>
             <property name="layout_style">center</property>
             <child>
-              <object class="GtkButton" id="button1">
+              <object class="GtkButton" id="solve">
                 <property name="label" translatable="yes">Resolver</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -59,13 +57,11 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="button2">
+              <object class="GtkButton" id="graphic">
                 <property name="label" translatable="yes">Graficar</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -81,7 +77,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTextView" id="textview2">
+          <object class="GtkTextView" id="salida">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="editable">False</property>
